src/passes/snapshots/lumina2__passes__thir_gen__test__return integer.snap
---
source: src/passes/thir_gen.rs
expression: "[] => TypeId(2)"
---
[
    (
        TypeVarId(
            0,
        ),
        Eq(
            TypeVarId(
                1,
            ),
        ),
    ),
]
