src/passes/snapshots/lumina2__passes__thir_gen__test__return_statement.snap
---
source: src/passes/thir_gen.rs
expression: pass.constraints
---
[
    (
        Expression(
            ExpressionId(
                1,
            ),
        ),
        Integer(
            Any,
        ),
    ),
    (
        Expression(
            ExpressionId(
                1,
            ),
        ),
        Eq(
            Type(
                TypeId(
                    3,
                ),
            ),
        ),
    ),
    (
        Expression(
            ExpressionId(
                0,
            ),
        ),
        Eq(
            Type(
                TypeId(
                    0,
                ),
            ),
        ),
    ),
]
