src/passes/snapshots/lumina2__passes__thir_gen__test__simple.snap
---
source: src/passes/thir_gen.rs
expression: "[] => TypeId(1)"
---
[
    (
        TypeVarId(
            0,
        ),
        Eq(
            TypeVarId(
                1,
            ),
        ),
    ),
]
