src/passes/snapshots/lumina2__passes__thir_gen__test__with type.snap
---
source: src/passes/thir_gen.rs
expression: Type(TypeId(2))
---
[
    (
        TypeVarId(
            0,
        ),
        Eq(
            TypeVarId(
                1,
            ),
        ),
    ),
    (
        TypeVarId(
            2,
        ),
        Aggregate(
            0,
        ),
    ),
]
