src/passes/snapshots/lumina2__passes__thir_gen__test__with unit.snap
---
source: src/passes/thir_gen.rs
expression: Type(TypeId(1))
---
[
    (
        TypeVarId(
            0,
        ),
        Eq(
            TypeVarId(
                1,
            ),
        ),
    ),
    (
        TypeVarId(
            2,
        ),
        Aggregate(
            0,
        ),
    ),
]
